--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -66,7 +66,7 @@ jobs:
         python-version: '3.7'
     - run: |
         pip install -e .[tests]
-        pip install meson
+        pip install meson==0.53.0
     - name: Install packages
       run: |
         sudo apt update -yq
