--- a/temporal/CMakeLists.txt
+++ b/temporal/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(temporal temporal.f90)
 target_link_libraries(temporal PRIVATE const mesh mpimod MPI::MPI_Fortran)
 
 add_library(timeutils timeutils.f90)
+target_include_directories(timeutils INTERFACE ${CMAKE_CURRENT_BINARY_DIR})
 target_link_libraries(timeutils PRIVATE const)
 
 add_executable(test_formats test_formats.f90)
