neutral: put atmospheric model in submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,18 +44,10 @@ add_subdirectory(vendor/msis00)
 
 # --- GEMINI
 add_subdirectory(ionization)
-
 add_subdirectory(numerical)
-
 add_subdirectory(io)
-
 add_subdirectory(temporal)
-
-add_library(neutral neutral/neutral.f90)
-target_link_libraries(neutral PRIVATE const grid interp mpimod msis timeutils MPI::MPI_Fortran)
-target_include_directories(neutral INTERFACE ${CMAKE_CURRENT_BINARY_DIR}/include)
-set_target_properties(neutral PROPERTIES
-  Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
+add_subdirectory(neutral)
 
 add_library(collision collisions/collisions.f90)
 target_link_libraries(collision PRIVATE const)
