--- a/temporal/meson.build
+++ b/temporal/meson.build
@@ -1,6 +1,8 @@
 timeutils = library('timeutils', 'timeutils.f90',
   link_with: const)
 
+# -- optional tests
+
 test_formats = executable('test_formats', 'test_formats.f90',
   link_with: [const, timeutils])
 test('Formats', test_formats, suite : 'unit')
