--- a/numerical/diffusion/CMakeLists.txt
+++ b/numerical/diffusion/CMakeLists.txt
@@ -1,6 +1,10 @@
 add_library(PDEparabolic PDEparabolic.f90)
 target_link_libraries(PDEparabolic PRIVATE const ${LAPACK_LIBRARIES})
-target_include_directories(PDEparabolic PRIVATE ${LAPACK_INCLUDE_DIRS})
+target_include_directories(PDEparabolic
+  PRIVATE ${LAPACK_INCLUDE_DIRS}
+  INTERFACE ${CMAKE_CURRENT_BINARY_DIR}/include)
+set_target_properties(PDEparabolic PROPERTIES
+  Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
 if(NOT LAPACK_LAPACK95_FOUND)
   target_sources(PDEparabolic PRIVATE ${CMAKE_SOURCE_DIR}/vendor/lapack95/gbsv.f90)
 endif()
