sources submod; cmake: more include corrections

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,21 +55,20 @@ target_include_directories(collision INTERFACE ${CMAKE_CURRENT_BINARY_DIR}/inclu
 set_target_properties(collision PROPERTIES
   Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
 
-add_library(sources sources/sources.f90)
-target_link_libraries(sources PRIVATE calculus collision const grid mpimod)
+add_subdirectory(sources)
 
 # --- other libs
 add_library(multifluid multifluid/multifluid.f90)
-target_link_libraries(multifluid PRIVATE advec calculus collision const diffusion grid ionization mpimod precipBCs sources timeutils)
+target_link_libraries(multifluid PRIVATE advec calculus collision const diffusion grid mesh ionization mpimod precipBCs sources timeutils)
 
 # --- Main GEMINI executable
 add_executable(gemini.bin gemini.f90)
-target_link_libraries(gemini.bin PRIVATE const grid io mpimod multifluid neutral potential precipBCs temporal timeutils
+target_link_libraries(gemini.bin PRIVATE const grid mesh io mpimod multifluid neutral potential precipBCs temporal timeutils
   ${LAPACK_LIBRARIES})  # necessary for self-compiled
 
 #--------magnetic field calculation executable---------------
 add_executable(magcalc.bin magcalc.f90)
-target_link_libraries(magcalc.bin PRIVATE mpimod const grid io timeutils)
+target_link_libraries(magcalc.bin PRIVATE mpimod const grid mesh io timeutils)
 
 # --- self-tests
 include(${CMAKE_SOURCE_DIR}/cmake/test2d.cmake)
