--- a/.github/workflows/ci_debug_build.yml
+++ b/.github/workflows/ci_debug_build.yml
@@ -30,7 +30,7 @@ jobs:
       run: |
         sudo apt update -yq
         sudo apt install -yq --no-install-recommends ninja-build pkg-config gfortran liblapack-dev libscalapack-openmpi-dev libmumps-dev libopenmpi-dev openmpi-bin libhdf5-dev octave
-    - run: meson setup build --buildtype=debug -Dhdf5=enabled
+    - run: meson setup build --buildtype=debug -Dhdf5=disabled
       env:
         FC: gfortran
     - uses: actions/upload-artifact@v1
