--- a/.github/workflows/ci_macos.yml
+++ b/.github/workflows/ci_macos.yml
@@ -35,7 +35,7 @@ jobs:
         pip install meson==0.53.0
     - run: brew install ninja pkg-config gcc open-mpi lapack hdf5 scalapack
 
-    - run: meson setup build -Dhdf5=enabled
+    - run: meson setup build -Dhdf5=disabled
       env:
         FC: gfortran-9
         CC: gcc-9
@@ -66,7 +66,7 @@ jobs:
     - run: pip install -e .[tests]
     - run: brew install pkg-config gcc lapack open-mpi hdf5 scalapack
 
-    - run: cmake -B build -Dhdf5=enabled
+    - run: cmake -B build -Dhdf5=false
       env:
         FC: gfortran-9
         CC: gcc-9
