--- a/.github/workflows/ci_rawio.yml
+++ b/.github/workflows/ci_rawio.yml
@@ -24,7 +24,7 @@ jobs:
         pip install cmake
 
     - name: CMake configure
-      run: cmake -B build -Dhdf5=disabled
+      run: cmake -B build -Dhdf5=false
       env:
         FC: gfortran
     - run: cmake --build build --parallel
