--- a/io/CMakeLists.txt
+++ b/io/CMakeLists.txt
@@ -35,3 +35,19 @@ elseif(netcdf)
   target_include_directories(io PUBLIC ${NetCDF_INCLUDE_DIRS})
   target_link_libraries(io PUBLIC nc4fortran ${NetCDF_LIBRARIES})
 endif()
+
+#=== reader
+add_library(reader reader.f90)
+if(hdf5)
+  target_sources(reader PRIVATE reader_hdf5.f90)
+  target_link_libraries(reader PRIVATE h5fortran::h5fortran)
+elseif(netcdf)
+  target_sources(reader PRIVATE reader_nc4.f90)
+  target_link_libraries(reader PRIVATE nc4fortran::nc4fortran)
+else()
+  target_sources(reader PRIVATE reader_raw.f90)
+endif()
+target_link_libraries(reader PRIVATE const)
+target_include_directories(reader INTERFACE ${CMAKE_CURRENT_BINARY_DIR}/include)
+set_target_properties(reader PROPERTIES
+  Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
