grid: use reader module for raw

--- a/numerical/grid/CMakeLists.txt
+++ b/numerical/grid/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(grid grid.f90 read.f90)
-target_link_libraries(grid PUBLIC const mesh mpimod MPI::MPI_Fortran) # PUBLIC necessary for ifort, even with MPI target
+target_link_libraries(grid PUBLIC const reader mesh mpimod MPI::MPI_Fortran) # PUBLIC necessary for ifort, even with MPI target
 target_include_directories(grid INTERFACE ${CMAKE_CURRENT_BINARY_DIR}/include)
 set_target_properties(grid PROPERTIES
   Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
