neutral: use reader_raw

--- a/neutral/meson.build
+++ b/neutral/meson.build
@@ -1,4 +1,4 @@
 neutral = library('neutral',
   sources: ['neutral.f90', 'atmos.f90'],
   dependencies : mpi,
-  link_with : [const, grid, mesh, interp, mpimod, msis, timeutils])
+  link_with : [const, grid, mesh, reader, interp, mpimod, msis, timeutils])
