--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,14 +9,14 @@ FIXTURES_SETUP MPIMUMPS)
 # ---
 
 if("d" IN_LIST arith)
-  add_executable(test_scalapack_d test_scalapack_d.f90)
-  target_link_libraries(test_scalapack_d ${SCALAPACK_LIBRARIES} ${LAPACK_LIBRARIES} MPI::MPI_Fortran)
-  target_include_directories(test_scalapack_d PRIVATE ${SCALAPACK_INCLUDE_DIRS})
-  
-  add_test(NAME scalapack_d COMMAND test_scalapack_d)
+  add_executable(gemini_scalapack_d test_scalapack_d.f90)
+  target_link_libraries(gemini_scalapack_d ${SCALAPACK_LIBRARIES} ${LAPACK_LIBRARIES} MPI::MPI_Fortran)
+  target_include_directories(gemini_scalapack_d PRIVATE ${SCALAPACK_INCLUDE_DIRS})
+
+  add_test(NAME scalapack_d COMMAND gemini_scalapack_d)
   set_tests_properties(scalapack_d PROPERTIES
-    TIMEOUT 15
-    FIXTURES_SETUP MPIMUMPS)
+  TIMEOUT 15
+  FIXTURES_SETUP MPIMUMPS)
 endif()
 
 # ---
