lapack95: push off real32 till needed (speedup compile)
cmake: set arith at top level. Test_scalapack: only test with matching precision

test_scalapack_d name by arith for future _s tests

cmake: ensure realbits is set

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,11 @@ project(gemini3d
 
 enable_testing()
 
-if(NOT realbits)
+if(realbits EQUAL 32)
+  set(arith s)
+else()
   set(realbits 64)
+  set(arith d)
 endif()
 option(glow "use NCAR GLOW instead of Fang" ON)
 option(matlab "enable Matlab tests, which are slow and duplicate fast Octave tests" OFF)
