plasma_input depends on reader module

--- a/meson.build
+++ b/meson.build
@@ -30,7 +30,7 @@ elif netcdf_interface.found()
 endif
 io = library('io',
   sources: io_src,
-  link_with: [calculus, const, pathlib, grid, mpimod, timeutils],
+  link_with: [calculus, const, pathlib, reader, grid, mpimod, timeutils],
   dependencies: io_deps)  # ifort needs dep: mpi here
 
 
